- maj de la page stats

--- a/frontend/loto-frontend/src/app/features/predictions/predictions.component.html
+++ b/frontend/loto-frontend/src/app/features/predictions/predictions.component.html
@@ -23,6 +23,10 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+
+      <p class="strategy-description">
+        {{ selectedStrategyDescription }}
+      </p>
     </div>
 
     <button mat-raised-button color="primary" (click)="onGenerateClick()" [disabled]="isLoading">
